--- a/notebooks/03_factor_analysis_clustering.ipynb
+++ b/notebooks/03_factor_analysis_clustering.ipynb
@@ -71,7 +71,7 @@
         "\n",
         "# Factor Analysis\n",
         "from factor_analyzer import FactorAnalyzer\n",
-        "from factor_analyzer.factor_analyzer import calculate_bartlett_sphericity, calculate_kms\n",
+        "from factor_analyzer.factor_analyzer import calculate_bartlett_sphericity, calculate_kmo\n",
         "\n",
         "# Clustering algorithms\n",
         "from sklearn.cluster import (AffinityPropagation, AgglomerativeClustering, \n",
@@ -205,7 +205,7 @@
       "outputs": [],
       "source": [
         "# Perform KMO Test\n",
-        "kmo_all, kmo_model = calculate_kms(behavioral_vars)\n",
+        "kmo_all, kmo_model = calculate_kmo(behavioral_vars)\n",
         "\n",
         "print(\"Kaiser-Meyer-Olkin (KMO) Test\")\n",
         "print(\"=\"*60)\n",
@@ -1085,8 +1085,14 @@
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.13.7"
     }
   },
   "nbformat": 4,
