Fix Avg_Rank column error - use actual Silhouette score instead
BUG FIX - Cell 43 Summary:

User reported: 'It also does not have a column named rank'

ROOT CAUSE:
Code tried to access row['Avg_Rank'] but eval_df doesn't have this column!

eval_df only has these columns:
- Method
- N_Clusters_Request
- N_Clusters_Found
- Silhouette
- Calinski_Harabasz
- Davies_Bouldin
- Labels

SOLUTION:
1. Sort eval_df by Silhouette score (higher = better)
2. Show Silhouette score instead of non-existent Avg_Rank
3. Use enumerate() for proper numbering (1, 2, 3...)

BEFORE (broken):
   print(f"Rank: {row['Avg_Rank']:.2f}")  # ❌ KeyError!

AFTER (working):
   print(f"Silhouette: {row['Silhouette']:.3f}")  # ✅ Exists!

ENHANCED DIAGNOSTICS:
- Now shows eval_df columns if empty
- Better conditional structure

Output example:
📊 Top 3 Performing Configurations:
   1. K-Means              (5 clusters) - Silhouette: 0.512
   2. BIRCH                (5 clusters) - Silhouette: 0.508
   3. Gaussian Mixture     (5 clusters) - Silhouette: 0.505

This matches the actual data structure created in Cell 30!

--- a/notebooks/03_factor_analysis_clustering.ipynb
+++ b/notebooks/03_factor_analysis_clustering.ipynb
@@ -1821,10 +1821,14 @@
         "if len(eval_df) == 0:\n",
         "    print(\"⚠️  WARNING: eval_df is empty! Clustering evaluation may have failed.\")\n",
         "    print(f\"   eval_df shape: {eval_df.shape}\")\n",
+        "    print(f\"   eval_df columns: {list(eval_df.columns)}\")\n",
+        "else:\n",
+        "    print(f\"✓ eval_df has {len(eval_df)} configurations\")\n",
+        "    \n",
         "if 'df_final' not in dir() or len(df_final) == 0:\n",
         "    print(\"⚠️  WARNING: df_final is not defined or empty!\")\n",
-        "print(f\"✓ eval_df has {len(eval_df)} configurations\")\n",
-        "print(f\"✓ df_final has {len(df_final) if 'df_final' in dir() else 0} participants\")\n",
+        "else:\n",
+        "    print(f\"✓ df_final has {len(df_final)} participants\")\n",
         "print()\n",
         "\n",
         "print(\"=\"*80)\n",
@@ -1865,12 +1869,16 @@
         "print(\"   3. Davies-Bouldin Index (lower = better)\")\n",
         "\n",
         "# Get top 3 performing configurations (or fewer if not enough data)\n",
-        "n_top = min(3, len(eval_df))\n",
-        "if n_top > 0:\n",
-        "    top_n = eval_df.head(n_top)\n",
+        "# Sort by Silhouette score (higher is better)\n",
+        "if len(eval_df) > 0:\n",
+        "    eval_df_sorted = eval_df.sort_values('Silhouette', ascending=False)\n",
+        "    n_top = min(3, len(eval_df_sorted))\n",
+        "    top_n = eval_df_sorted.head(n_top)\n",
+        "    \n",
         "    print(f\"\\n📊 Top {n_top} Performing Configuration{'s' if n_top > 1 else ''}:\")\n",
-        "    for idx, row in top_n.iterrows():\n",
-        "        print(f\"   {idx+1}. {row['Method']:20s} ({row['N_Clusters_Found']} clusters) - Rank: {row['Avg_Rank']:.2f}\")\n",
+        "    for i, (idx, row) in enumerate(top_n.iterrows(), 1):\n",
+        "        print(f\"   {i}. {row['Method']:20s} ({row['N_Clusters_Found']} clusters) - \" + \n",
+        "              f\"Silhouette: {row['Silhouette']:.3f}\")\n",
         "else:\n",
         "    print(f\"\\n⚠️  No valid clustering configurations found in evaluation\")\n",
         "    print(\"   Check that previous clustering cells completed successfully\")\n",
