--- a/notebooks/03_factor_analysis_clustering.ipynb
+++ b/notebooks/03_factor_analysis_clustering.ipynb
@@ -1652,109 +1652,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Method</th>\n",
-              "      <th>N_Clusters_Request</th>\n",
-              "      <th>N_Clusters_Found</th>\n",
-              "      <th>Silhouette</th>\n",
-              "      <th>Calinski_Harabasz</th>\n",
-              "      <th>Davies_Bouldin</th>\n",
-              "      <th>Labels</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>Affinity Propagation</td>\n",
-              "      <td>3</td>\n",
-              "      <td>153</td>\n",
-              "      <td>0.193440</td>\n",
-              "      <td>45.401921</td>\n",
-              "      <td>0.149932</td>\n",
-              "      <td>[0, 1, 2, 89, 67, 3, 4, 5, 6, 7, 8, 9, 10, 11,...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Agglomerative</td>\n",
-              "      <td>3</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0.729413</td>\n",
-              "      <td>311.532546</td>\n",
-              "      <td>0.475087</td>\n",
-              "      <td>[0, 0, 0, 1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>BIRCH</td>\n",
-              "      <td>3</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0.729413</td>\n",
-              "      <td>311.532546</td>\n",
-              "      <td>0.475087</td>\n",
-              "      <td>[0, 0, 0, 2, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                 Method  N_Clusters_Request  N_Clusters_Found  Silhouette  \\\n",
-              "0  Affinity Propagation                   3               153    0.193440   \n",
-              "1         Agglomerative                   3                 3    0.729413   \n",
-              "2                 BIRCH                   3                 3    0.729413   \n",
-              "\n",
-              "   Calinski_Harabasz  Davies_Bouldin  \\\n",
-              "0          45.401921        0.149932   \n",
-              "1         311.532546        0.475087   \n",
-              "2         311.532546        0.475087   \n",
-              "\n",
-              "                                              Labels  \n",
-              "0  [0, 1, 2, 89, 67, 3, 4, 5, 6, 7, 8, 9, 10, 11,...  \n",
-              "1  [0, 0, 0, 1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-              "2  [0, 0, 0, 2, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  "
-            ]
-          },
-          "execution_count": 65,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "top_3"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "🔍 Checking data availability...\n",
+            "✓ eval_df has 40 configurations\n",
+            "✓ df_final has 227 participants\n",
+            "\n",
             "================================================================================\n",
             "FACTOR ANALYSIS & CLUSTERING SUMMARY\n",
             "================================================================================\n",
@@ -1788,29 +1696,40 @@
             "   2. Calinski-Harabasz Index (higher = better)\n",
             "   3. Davies-Bouldin Index (lower = better)\n",
             "\n",
-            "📊 Top 3 Performing Configurations:\n"
-          ]
-        },
-        {
-          "ename": "KeyError",
-          "evalue": "'n_clusters'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/personal/.venv/lib/python3.13/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-            "\u001b[31mKeyError\u001b[39m: 'n_clusters'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[64]\u001b[39m\u001b[32m, line 43\u001b[39m\n\u001b[32m     41\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m📊 Top 3 Performing Configurations:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     42\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m idx, row \u001b[38;5;129;01min\u001b[39;00m top_3.iterrows():\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m   \u001b[39m\u001b[38;5;132;01m{\u001b[39;00midx+\u001b[32m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m. \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrow[\u001b[33m'\u001b[39m\u001b[33mMethod\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m20s\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mn_clusters\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m clusters) - Rank: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrow[\u001b[33m'\u001b[39m\u001b[33mAvg_Rank\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     45\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m### PART E: Final Selection\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     46\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m-\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m80\u001b[39m)\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/personal/.venv/lib/python3.13/site-packages/pandas/core/series.py:1133\u001b[39m, in \u001b[36mSeries.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   1130\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._values[key]\n\u001b[32m   1132\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[32m-> \u001b[39m\u001b[32m1133\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1135\u001b[39m \u001b[38;5;66;03m# Convert generator to list before going through hashable part\u001b[39;00m\n\u001b[32m   1136\u001b[39m \u001b[38;5;66;03m# (We will iterate through the generator there to check for slices)\u001b[39;00m\n\u001b[32m   1137\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/personal/.venv/lib/python3.13/site-packages/pandas/core/series.py:1249\u001b[39m, in \u001b[36mSeries._get_value\u001b[39m\u001b[34m(self, label, takeable)\u001b[39m\n\u001b[32m   1246\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._values[label]\n\u001b[32m   1248\u001b[39m \u001b[38;5;66;03m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1249\u001b[39m loc = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1251\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(loc):\n\u001b[32m   1252\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._values[loc]\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/personal/.venv/lib/python3.13/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-            "\u001b[31mKeyError\u001b[39m: 'n_clusters'"
+            "📊 Top 3 Performing Configurations:\n",
+            "   1. K-Means              (5 clusters) - Silhouette: 0.922\n",
+            "   2. Gaussian Mixture     (5 clusters) - Silhouette: 0.922\n",
+            "   3. K-Means              (7 clusters) - Silhouette: 0.921\n",
+            "\n",
+            "### PART E: Final Selection\n",
+            "--------------------------------------------------------------------------------\n",
+            "✅ **Optimal Clustering:** K-Means with **5 clusters**\n",
+            "✅ **Convergence:** K-Means, BIRCH, and Gaussian Mixture Model all found 5 clusters\n",
+            "✅ **Total Participants Clustered:** 227\n",
+            "\n",
+            "📊 Cluster Distribution:\n",
+            "   Cluster 0:  33 participants ( 14.5%)\n",
+            "   Cluster 1: 124 participants ( 54.6%)\n",
+            "   Cluster 2:  30 participants ( 13.2%)\n",
+            "   Cluster 3:  15 participants (  6.6%)\n",
+            "   Cluster 4:  25 participants ( 11.0%)\n",
+            "\n",
+            "### Data Outputs\n",
+            "--------------------------------------------------------------------------------\n",
+            "✅ Files exported:\n",
+            "   - data_with_factors_clusters.csv (227 rows × 18 columns)\n",
+            "   - clustering_evaluation.csv (40 configurations)\n",
+            "\n",
+            "✅ Exported data includes:\n",
+            "   - Original behavioral variables: 12\n",
+            "   - Demographics (ID, Sex, Age): 3\n",
+            "   - Factor scores: 2\n",
+            "   - Cluster assignment: 1\n",
+            "   - Total columns: 18\n",
+            "\n",
+            "================================================================================\n",
+            "✅ ANALYSIS COMPLETE\n",
+            "================================================================================\n"
           ]
         }
       ],
